refactored questionnaire/respone integration tests